[package]
name = "Reather"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
colored = "3.1.1"
unicode-width = "0.2.2"